# VoiceVault

./: .dockerignore  .env.example  .eslintcache  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PHASE3_RESULTS.md  PROJECT_UPDATE.md  README.md  TRANSLATING.md  docker-compose.yml  electrobun.config.ts  electron-builder.yml  eslint.config.mjs  github settings (chat log).md  issue-171-prompt.txt  issue-177-prompt.txt  issue-179-prompt.txt  issue-181-prompt.txt  issue-182-prompt.txt  package.json  plugin_reframe_spec.md  pnpm-lock.yaml  prompt-184.txt  pyproject.toml  pytest.ini  requirements.txt  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.claude/: notes.md
.claude/commands/: commit.md  i18n-check.md  implement-plan.md  review.md  test-and-fix.md
.claude/skills/: power-workflow.md
.cursor/plans/: 01-app-shell-audio-recording.md  01-app-shell-audio-recording.plan.md  02-real-time-transcription.md  02-real-time-transcription.plan.md  03-recording-library-database.md  03-recording-library-database.plan.md  04-local-llm-summarization.md  04-local-llm-summarization.plan.md  05-cloud-llm-fallback.md  05-cloud-llm-fallback.plan.md  06-speaker-diarization.md  06-speaker-diarization.plan.md  07-rag-search.md  07-rag-search.plan.md  08-obsidian-export.md  08-obsidian-export.plan.md  09-classification-templates.md  09-classification-templates.plan.md  10-system-audio-capture.md  10-system-audio-capture.plan.md  11-real-time-translation.md  11-real-time-translation.plan.md  12-internationalization.md  12-internationalization.plan.md  concise_plan_rewrite_7f18fc09.plan.md  fix-phase-a-foundation.plan.md  fix-phase-b-architecture.plan.md  fix-phase-c-polish.plan.md
.cursor/rules/: electron.mdc  general.mdc  services.mdc  typescript.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  sprint-backlog.md
.github/workflows/: ci.yml  package.yml
.serena/: project.yml
archived/electron-main/: menu.ts
archived/electron-preload/: index.d.ts  index.ts
archived/tests-electron/: AudioCaptureService.test.ts  DiarizationService.test.ts  PermissionService.test.ts  PromptService.test.ts  SpeakerProfileService.test.ts  TemplateEngine.test.ts  integration-pipeline.test.ts  translation-ipc.test.ts
backend/: pyproject.toml  pytest.ini  requirements.txt
backend/scripts/: export_openapi.py  seed_demo_data.py  setup_dev.sh
docs/: EXECUTION_PLAN.md  EXECUTION_PLAN_v0.6.0.md  NATIVE_DEPS.md  PR_DESCRIPTION.md  migration-plan-v0.4.0.md  openapi.json  smoke-test-a4-results.md  streamlit-deprecation-plan.md
docs/spec/: components.md  design-tokens.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/e2e/: home.spec.ts
frontend/public/: audio-capture-processor.js
plugin/: manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
plugin/src/: main.ts  settings.ts
resources/: version.json
scripts/: bench-whisper-sustained.ts  check-docs-sync.mjs  check-translations.mjs  dev-electrobun.sh  download_models.py  fix-electrobun-index.sh  generate-plugin-types.mjs  post-build.sh  run-whisper-bench-suite.ts  seed_demo_data.py  seed_templates.py  setup_dev.sh  test-whisper-subprocess.ts  test-whisper.sh
scripts/demo_data/: __init__.py  scenarios.py
src/: __init__.py
src/api/: app.py  websocket.py
src/core/: __init__.py  config.py  exceptions.py  models.py
src/electrobun/: PHASE3_RESULTS.md  WEBVIEW_COMPAT.md  http-rpc.ts  main.ts
src/main/: http-rpc.ts  index.ts  main.ts  menu.ts  store.ts  types.ts
src/preload/: index.d.ts  index.ts
templates/: conversation.json  english_vocabulary.json  incident.json  lecture.json  meeting.json  memo.json  person.json
tests/: __init__.py  conftest.py
wiki/: API-Reference.md  Architecture.md  Data-Schema-&-Pipeline.md  Deployment.md  Development-Guide.md  FAQ-&-Troubleshooting.md  Getting-Started.md  Home.md  Refactoring-Plan.md  Roadmap.md  Template-System.md  TypeScript-Migration.md  User-Guide.md  _Sidebar.md
(+387 files in other folders)
