[project]
name = "voicevault"
version = "0.2.0"
description = "AI-powered voice recording system with transcription, summarization, classification, and RAG-powered search. Obsidian-compatible export."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "VoiceVault Team", email = "voicevault@example.com" }
]
keywords = ["voice", "transcription", "summarization", "ai", "whisper", "llm", "rag", "obsidian", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "python-multipart>=0.0.18",
    "websockets>=13.1",

    # Audio Processing & Transcription
    "faster-whisper>=1.1.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.5.1",
    "pydub>=0.25.1",
    "numpy>=1.26.0,<2.0.0",

    # LLM Providers
    "anthropic>=0.39.0",
    "ollama>=0.4.5",

    # RAG & Embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=3.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # Data Validation & Serialization
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Obsidian Export
    "pyyaml>=6.0.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.0",
    "pytest-mock>=3.14.0",
    "psutil>=6.0.0",
    "httpx>=0.28.0",

    # Linting & Formatting
    "ruff>=0.8.0",

    # Type Checking
    "mypy>=1.13.0",
    "types-requests>=2.32.0",

    # Security
    "bandit>=1.8.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (for hackathon context)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["B011"]      # assert False

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "stress: Stress tests (long-running simulations)",
    "slow: Slow-running tests",
    "gpu: Tests requiring GPU",
]
env = [
    "ENVIRONMENT=test",
    "DATABASE_URL=sqlite+aiosqlite:///:memory:",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed for hackathon
ignore_missing_imports = true  # Relaxed for hackathon
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert in tests

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
